--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,11 @@
   font-style: italic;
   text-transform: capitalize;
 }
+.truck-modal dl dt::after {
+  content: " :";
+}
 .truck-modal dl dd {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0;
 }
 
