Add fixes to Google Maps API

--- a/src/app/selected-truck/selected-truck.component.html
+++ b/src/app/selected-truck/selected-truck.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="selectedTruck" class="truck-modal">
-  <button (click)="close()">X</button>
+  <button (click)="close()"><i class="fa fa-times fa-lg close" aria-hidden="true"></i></button>
   <dl>
     <dt>Driver</dt>
     <dd>{{ selectedTruck.driver }}</dd>
