--- a/src/css/utils/_colors.scss
+++ b/src/css/utils/_colors.scss
@@ -2,6 +2,6 @@ $blue: #2F7CD6;
 $blue-dark: #628DBD;
 $blue-medium: #6396CF;
 $blue_light: #6F9FD5;
-$black: #222d3A;
+$black: #222D3A;
 
 $border-tr: rgba(0,0,0,0.1);
