--- a/src/css/components/_truckModal.scss
+++ b/src/css/components/_truckModal.scss
@@ -1,30 +1,45 @@
 .truck-modal {
     background-color: $blue-dark;
+    border-bottom-right-radius: 10px;
     color: white;
-    padding: 10px;
+    padding: 15px;
     position: absolute;
     right: -300px;
     top: 25px;
     width: 300px;
     z-index: 1;
     button {
+        background: inherit;
+        border: none;
+        cursor: pointer;
+        height: 15px;
+        padding: 0;
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 15px;
+        top: 15px;
+        width: 15px;
+        i {
+            color: white;
+            height: 15px;
+            width: 15px;
+        }
     }
     dl {
         margin: 0;
         dt {
-            padding-top: 10px;
+            color: $black;
             font-style: italic;
+            font-size: 14px;
+            padding-top: 10px;
             text-transform: capitalize;
             &::after {
-                content: " :";
+                content: ":";
             }
         }
         dd {
             border-bottom: 1px solid $border-tr;
             margin: 0;
+            padding-bottom: 3px;
         }
     }
 }
