--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: space-around;
   min-width: 325px;
+  transition: background-color 500ms;
 }
 .truck-list .truck-list__item:hover {
   background-color: #6F9FD5;
@@ -34,10 +35,10 @@
   margin: 10px 0;
   padding-right: 5px;
   position: relative;
-  width: 70px;
+  width: 75px;
 }
 .truck-list .truck-list__item dl:first-of-type {
-  width: 150px;
+  width: 140px;
 }
 .truck-list .truck-list__item dl::before {
   content: "";
@@ -47,6 +48,7 @@
   position: absolute;
 }
 .truck-list .truck-list__item dl dt {
+  color: #222D3A;
   font-size: 12px;
   font-style: italic;
   text-transform: capitalize;
@@ -61,8 +63,9 @@
 
 .truck-modal {
   background-color: #628DBD;
+  border-bottom-right-radius: 10px;
   color: white;
-  padding: 10px;
+  padding: 15px;
   position: absolute;
   right: -300px;
   top: 25px;
@@ -70,24 +73,38 @@
   z-index: 1;
 }
 .truck-modal button {
+  background: inherit;
+  border: none;
+  cursor: pointer;
+  height: 15px;
+  padding: 0;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 15px;
+  top: 15px;
+  width: 15px;
+}
+.truck-modal button i {
+  color: white;
+  height: 15px;
+  width: 15px;
 }
 .truck-modal dl {
   margin: 0;
 }
 .truck-modal dl dt {
-  padding-top: 10px;
+  color: #222D3A;
   font-style: italic;
+  font-size: 14px;
+  padding-top: 10px;
   text-transform: capitalize;
 }
 .truck-modal dl dt::after {
-  content: " :";
+  content: ":";
 }
 .truck-modal dl dd {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0;
+  padding-bottom: 3px;
 }
 
 html, body {
@@ -105,7 +122,7 @@ html, body {
 }
 
 .main {
-  background-color: #222d3A;
+  background-color: #222D3A;
   height: 100%;
   width: 100%;
 }
