--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <app-truck-list class="trucks-container__list"></app-truck-list>
     <app-truck-map class="trucks-container__map"></app-truck-map>
   </section>
+  <app-truck-selection-dialog></app-truck-selection-dialog>
 </main>
