--- a/src/app/components/selected-truck/selected-truck.component.html
+++ b/src/app/components/selected-truck/selected-truck.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="selectedTruck" class="truck-modal">
-  <button (click)="close()"><i class="fa fa-times fa-lg close" aria-hidden="true"></i></button>
+  <button (click)="close()" class="close"><i class="fa fa-times fa-lg" aria-hidden="true"></i></button>
   <dl>
     <dt>Driver</dt>
     <dd>{{ selectedTruck.driver }}</dd>
@@ -14,4 +14,5 @@
     <dt>Coordinates</dt>
     <dd>{{ selectedTruck.longitude }}, {{ selectedTruck.latitude }}</dd>
   </dl>
+  <button (click)="showTrucksList()" class="button button--select-truck">get route</button>
 </section>
