--- a/src/css/utils/_colors.scss
+++ b/src/css/utils/_colors.scss
@@ -1,7 +1,15 @@
 $blue: #2F7CD6;
+$blue-hover: rgba(47, 124, 214, 0.8);
 $blue-dark: #628DBD;
 $blue-medium: #6396CF;
 $blue_light: #6F9FD5;
 $black: #222D3A;
 
+$shadow: rgba(0,0,0,.2);
+$shadow-light: rgba(0,0,0,.1);
+
 $border-tr: rgba(0,0,0,0.1);
+
+$input-background: #EAEAE8;
+$border-dark: #213B3D;
+$filter-field-border: #489691;
