--- a/src/app/components/truck-list/truck-list.component.html
+++ b/src/app/components/truck-list/truck-list.component.html
@@ -1,6 +1,6 @@
 <aside class="truck-list">
-  <a class="truck-list__item" *ngFor="let truck of trucks | async" (click)="onSelect($event, truck)">
-    <input type="checkbox" (change)="onCheckboxChange($event, truck)">
+  <a class="truck-list__item" *ngFor="let truck of trucks" (click)="onSelect($event, truck)">
+    <input class="checkbox" type="checkbox" (change)="onCheckboxChange($event, truck)">
     <dl>
       <dt>driver</dt>
       <dd>{{ truck.driver }}</dd>
