--- a/src/app/components/truck-map/truck-map.component.html
+++ b/src/app/components/truck-map/truck-map.component.html
@@ -1,5 +1,6 @@
-<agm-map [latitude]="lat" [longitude]="lng">
+<agm-map *ngIf="lat && lng" [latitude]="lat" [longitude]="lng">
     <agm-marker *ngIf="selected" [latitude]="lat" [longitude]="lng" [iconUrl]="selectedTruckImage"></agm-marker>
-    <agm-marker *ngFor="let truck of trucks | async" [latitude]="truck.latitude" [longitude]="truck.longitude" [iconUrl]="checkBoxTruckImage"></agm-marker>
+    <agm-marker *ngFor="let truck of trucks" [latitude]="truck.latitude" [longitude]="truck.longitude" [iconUrl]="checkBoxTruckImage"></agm-marker>
     <agm-direction *ngIf="origin && destination" [origin]="origin" [destination]="destination"></agm-direction>
 </agm-map>
+<app-route-data></app-route-data>
