--- a/src/css/components/_truckList.scss
+++ b/src/css/components/_truckList.scss
@@ -1,6 +1,7 @@
 .truck-list {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    background-color: $blue-dark;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
     height: 100%;
     overflow: auto;
     .truck-list__item {
@@ -17,9 +18,10 @@
             background-color: $blue-light;
         }
         input {
+            align-items: center;
             cursor: pointer;
             display: flex;
-            align-items: center;
+            height: 17px;;
             justify-content: center;
             margin: 0;
             width: 35px;
@@ -43,6 +45,7 @@
                 color: $black;
                 font-size: 12px;
                 font-style: italic;
+                font-weight: bold;
                 text-transform: capitalize;
             }
             dd {
@@ -50,6 +53,7 @@
                 overflow: hidden;
                 padding-right: 5px;
                 text-overflow: ellipsis;
+                text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
                 white-space: nowrap;
             }
         }
